@@ -56,7 +56,16 @@ _G._SPEC = true
 
 local specl  = require "specl"
 local util   = require "specl.util"
-local yaml   = require "lyaml"
+local ok, yaml = pcall (require, "yaml")
+
+-- lyaml < 4 compatibility:
+if not ok then
+  -- lyaml < 4 returns only the first document in the YAML stream, so wrap it
+  -- in a table to simulate lyaml >= 4 (if lyaml >= 4 discarded document 2+!)
+  yaml = require "lyaml"
+  local load = yaml.load
+  yaml.load = function (...) return { load (...) } end
+end
 
 
 -- Make a shallow copy of the pristine global environment, so that the
@@ -126,7 +135,7 @@ function slurp (filename)
     os.exit (1)
   end
 
-  t = {yaml.load (s)}
+  t = yaml.load (s)
 
   -- Prepend the spec file location to the package load path, so that
   -- requiring unqualified names from that directory works right away.
