@@ -2,6 +2,11 @@ Specl NEWS - User visible changes.
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** New features:
+
+  - Works with lyaml 4 and newer too (which returns all documents in
+    the YAML stream as a table).
+
 
 * Noteworthy changes in release 8 (2013-06-26) [stable]
 
